--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "es6-lib-skeleton",
+  "name": "apisearch-js-client",
   "version": "1.0.0",
-  "description": "Skeleton for javascript es6 library development",
-  "main": "index.js",
+  "description": "Javascript client for the Apisearch sagregator and search engine.",
+  "main": "./src/apisearch.js",
   "license": "MIT",
   "author": "alexhoma <alexcm.14@gmail.com>",
   "repository": {
@@ -11,8 +11,8 @@
   },
   "keywords": [
     "es6",
-    "skeleton",
-    "library",
+    "search-engine",
+    "apisearch",
     "webpack"
   ],
   "scripts": {
@@ -25,14 +25,13 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.0",
     "babel-loader": "^7.1.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "chai": "^4.1.2",
     "eslint": "^4.6.1",
     "eslint-loader": "^1.9.0",
     "mocha": "^3.5.3",
-    "chai": "^4.1.2",
     "webpack": "^3.5.5",
     "yargs": "^8.0.2"
   }
