--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "apisearch-js-client",
-  "version": "1.0.0",
+  "name": "apisearch",
+  "version": "0.1.0",
   "description": "Javascript client for the Apisearch sagregator and search engine.",
   "main": "./src/apisearch.js",
   "license": "MIT",
   "author": "alexhoma <alexcm.14@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/alexhoma/es6-lib-skeleton.git"
+    "url": "https://github.com/apisearch/javascript-search-client.git"
   },
   "keywords": [
     "es6",
