--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,17 @@
 {
   "parserOptions": {
     "ecmaVersion": 6,
-    "sourceType": "module",
-    "env": {
-      "es6": true
-    }
+    "sourceType": "module"
+  },
+  "env": {
+    "es6": true,
+    "browser": true,
+    "node": true
   },
   "globals": {
     "document": true,
     "navigator": true,
     "window": true
   },
-  "parser": "babel-eslint"
+  "parser": "babel-eslint",
 }
