--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Javascript client for Apisearch.",
   "main": "./dist/apisearch.node.js",
   "scripts": {
+    "examples": "webpack-dev-server --content-base examples/ --port 1234 --history-api-fallback index.html",
     "build": "rm -rf ./dist/*; webpack --config ./webpack.prod.js --progress --colors",
     "dev": "webpack --config ./webpack.dev.js --progress --colors --watch",
     "test": "mocha --compilers js:babel-core/register && eslint --quiet ./src/**/*.js",
@@ -32,15 +33,16 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
+    "chai": "^4.1.2",
     "eslint": "^4.6.1",
     "eslint-loader": "^1.9.0",
-    "chai": "^4.1.2",
     "mocha": "^3.5.3",
     "nyc": "^11.2.1",
     "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
     "yargs": "^8.0.2"
   },
