--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "./dist/apisearch.node.js",
   "scripts": {
     "examples": "webpack-dev-server --content-base examples/ --port 1234 --history-api-fallback index.html",
-    "build": "rm -rf ./dist/*; webpack --config ./webpack.prod.js --progress --colors",
-    "dev": "webpack --config ./webpack.dev.js --progress --colors --watch",
+    "build": "webpack --config ./webpack.prod.js --progress --colors",
+    "dev": "webpack --config ./webpack.dev.js --progress --colors",
+    "dist": "rm -rf ./dist/*; npm run build && npm run dev",
     "test": "mocha --compilers js:babel-core/register && eslint --quiet ./src/**/*.js",
     "cover": "nyc npm test"
   },
