--- a/package.json
+++ b/package.json
@@ -32,21 +32,19 @@
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.4",
+    "@types/node": "^10.5.1",
+    "typescript": "^2.9.2",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "ts-node": "^7.0.0",
-    "typings": "^2.1.1",
     "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.3",
-    "yargs": "^8.0.2",
-    "tslint": "^5.10.0"
-  },
-  "dependencies": {
-    "@types/node": "^10.5.1",
-    "axios": "^0.17.1",
+    "tslint": "^5.10.0",
     "ts-loader": "^4.4.2",
     "ts-md5": "^1.2.4"
+  },
+  "dependencies": {
+    "axios": "^0.17.1"
   }
 }
