--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "./dist/apisearch.js",
   "scripts": {
     "dev": "webpack --config ./webpack.dev.js --progress --colors --watch",
-    "build:dev": "webpack --config ./webpack.dev.js",
-    "build:min": "webpack --config ./webpack.min.js",
+    "build:dev": "webpack --config ./webpack.dev.js --display-error-details",
+    "build:min": "webpack --config ./webpack.min.js --display-error-details",
     "dist": "npm t; rm -rf ./dist/*; npm run build:dev && npm run build:min",
     "test": "mocha --recursive --require ts-node/register test/*/*.ts",
+    "fix": "tslint -c tslint.json --fix 'src/**/*.ts'",
     "test:functional": "mocha --recursive --require ts-node/register test/Functional/*/*.ts"
   },
   "license": "MIT",
