--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "compilerOptions": {
-    "lib": [ "es2015" ],
-    "outDir": "./dist/",
-    "allowJs": true
-  }
+    "compilerOptions": {
+        "lib": [ "es2015" ],
+        "outDir": "./dist/",
+        "allowJs": true
+    },
+    "include": ["src"]
 }
