--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "apisearch",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Javascript client for Apisearch.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "dev": "webpack --config ./webpack.dev.js --progress --colors --watch",
+    "build:lib": "tsc -d --outDir lib -m commonjs",
     "build:dev": "webpack --config ./webpack.dev.js --display-error-details",
     "build:min": "webpack --config ./webpack.min.js --display-error-details",
-    "dist": "npm t; rm -rf ./dist/*; npm run build:dev && npm run build:min",
+    "dist": "npm t; rm -rf ./dist/*; npm run build:lib && npm run build:dev && npm run build:min",
     "test": "mocha --recursive --require ts-node/register test/**/*.ts test/*.ts",
     "fix": "tslint -c tslint.json --fix 'src/**/*.ts'",
     "test:functional": "mocha --recursive --require ts-node/register test/Functional/*/*.ts"
