--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "lib": [ "es2015" ]
+        "lib": [ "es2015" ],
+        "importHelpers": true
     },
     "include": [
         "src"
