--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apisearch",
-  "version": "0.2.11",
+  "version": "0.2.12",
   "description": "Javascript client for Apisearch.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -34,18 +34,18 @@
   ],
   "devDependencies": {
     "@types/chai": "^4.1.4",
-    "@types/mocha": "^5.2.4",
-    "@types/node": "^10.5.1",
-    "typescript": "^2.9.2",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.9.4",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
-    "ts-node": "^7.0.0",
-    "webpack": "^4.14.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-merge": "^4.1.3",
-    "tslint": "^5.10.0",
-    "ts-loader": "^4.4.2",
-    "ts-md5": "^1.2.4"
+    "ts-loader": "^4.5.0",
+    "ts-md5": "^1.2.4",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2",
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
     "axios": "^0.17.1"
