--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apisearch",
-  "version": "0.2.15",
+  "version": "0.2.16",
   "description": "Javascript client for Apisearch.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -10,9 +10,10 @@
     "build:dev": "webpack --config ./webpack.dev.js --display-error-details",
     "build:min": "webpack --config ./webpack.min.js --display-error-details",
     "dist": "npm t; rm -rf ./dist/*; npm run build:lib && npm run build:dev && npm run build:min",
-    "test": "mocha --recursive --require ts-node/register test/**/*.ts test/*.ts",
     "fix": "tslint -c tslint.json --fix 'src/**/*.ts'",
-    "test:functional": "mocha --recursive --require ts-node/register test/Functional/*/*.ts"
+    "test:unit": "mocha --recursive --require ts-node/register test/**/*.ts test/*.ts",
+    "test:functional": "mocha --recursive --require ts-node/register test/Functional/*/*.ts",
+    "test": "npm run test:unit && npm run test:functional"
   },
   "license": "MIT",
   "author": "Marc Morera <yuhu@mmoreram.com>",
@@ -33,19 +34,19 @@
     "javascript-client"
   ],
   "devDependencies": {
-    "@types/chai": "^4.1.4",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.9.4",
-    "chai": "^4.1.2",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^10.14.4",
+    "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "ts-loader": "^4.5.0",
     "ts-md5": "^1.2.4",
     "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
+    "tslint": "^5.14.0",
     "typescript": "^2.9.2",
-    "webpack": "^4.17.2",
-    "webpack-cli": "^3.1.0",
-    "webpack-merge": "^4.1.4"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "axios": "^0.18.0"
