RetryMap was never used.
* Make use of RetryMap when the Axios request fails.
* Define an interface for RetryConfig, to let clients know which fields we expect when creating a Retry.
* Add new param "retry_map_config" in createRepository method, to make RetryMap usage easier.
* Fix: Creating a RetryMap from an array was not working.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apisearch",
-  "version": "0.2.21",
+  "version": "0.2.22",
   "description": "Javascript client for Apisearch.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -37,8 +37,10 @@
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
     "@types/node": "^10.14.4",
+    "@types/sinon": "^7.0.11",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
+    "sinon": "^7.3.2",
     "ts-loader": "^4.5.0",
     "ts-md5": "^1.2.4",
     "ts-node": "^7.0.1",
