--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apisearch",
-  "version": "0.2.22",
+  "version": "0.2.23",
   "description": "Javascript client for Apisearch.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -11,8 +11,8 @@
     "build:min": "webpack --config ./webpack.min.js --display-error-details",
     "dist": "npm t; rm -rf ./dist/*; npm run build:lib && npm run build:dev && npm run build:min",
     "fix": "tslint -c tslint.json --fix 'src/**/*.ts'",
-    "test:unit": "mocha --recursive --require ts-node/register test/**/*.ts test/*.ts",
-    "test:functional": "mocha --recursive --require ts-node/register test/Functional/*/*.ts",
+    "test:unit": "mocha --timeout 10000 --recursive --require ts-node/register test/**/*.ts test/*.ts",
+    "test:functional": "mocha --timeout 10000 --recursive --require ts-node/register test/Functional/*/*.ts",
     "test": "npm run test:unit && npm run test:functional"
   },
   "license": "MIT",
@@ -39,13 +39,13 @@
     "@types/node": "^10.14.4",
     "@types/sinon": "^7.0.11",
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
+    "mocha": "^7.1.1",
     "sinon": "^7.3.2",
     "ts-loader": "^4.5.0",
     "ts-md5": "^1.2.4",
-    "ts-node": "^7.0.1",
+    "ts-node": "^8.4.1",
     "tslint": "^5.14.0",
-    "typescript": "^2.9.2",
+    "typescript": "^3.6.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-merge": "^4.2.1"
