--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "apisearch",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "Javascript client for Apisearch.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "dev": "webpack --config ./webpack.dev.js --progress --colors --watch",
     "build:lib": "tsc -d --outDir lib -m commonjs",
-    "build:dev": "webpack --config ./webpack.dev.js --display-error-details",
-    "build:min": "webpack --config ./webpack.min.js --display-error-details",
+    "build:dev": "webpack --config ./webpack.dev.js",
+    "build:min": "webpack --config ./webpack.min.js",
     "dist": "npm t; rm -rf ./dist/*; npm run build:lib && npm run build:dev && npm run build:min",
     "fix": "tslint -c tslint.json --fix 'src/**/*.ts'",
     "test:unit": "mocha --timeout 10000 --recursive --require ts-node/register test/**/*.ts test/*.ts",
@@ -39,18 +39,19 @@
     "@types/node": "^10.14",
     "@types/sinon": "^7.0",
     "chai": "^4.2",
-    "mocha": "^7.1",
+    "mocha": "^9.1.3",
     "sinon": "^7.3",
-    "ts-loader": "^4.5",
+    "ts-loader": "^9.2.6",
     "ts-node": "^8.4",
     "tslint": "^5.14",
     "typescript": "^3.6",
     "webpack": "^5.53.0",
-    "webpack-cli": "^3.3",
+    "webpack-cli": "^4.9.1",
     "webpack-merge": "^4.2"
   },
   "dependencies": {
     "axios": ">=0.21.1",
+    "axios-retry": "^3.2.4",
     "ts-md5": "^1.2.4"
   }
 }
