--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "lib": [ "es2015" ],
+        "lib": [ "es2015", "DOM"],
         "importHelpers": true
     },
     "include": [
